fix: 保留用户反馈标识精度
