# backend/docs/swagger/swagger.yaml
@@ -7,7 +7,8 @@ definitions:
       createdAt:
         type: integer
       id:
-        type: integer
+        example: ""
+        type: string
       originalName:
         type: string
       sizeBytes:
@@ -64,12 +65,15 @@ definitions:
         type: integer
       feedbackNo:
         type: string
+      firstImageUrl:
+        type: string
       handlerId:
         type: integer
       handlerName:
         type: string
       id:
-        type: integer
+        example: ""
+        type: string
       imageCount:
         type: integer
       lastActivityAt:
@@ -114,12 +118,15 @@ definitions:
         type: integer
       feedbackNo:
         type: string
+      firstImageUrl:
+        type: string
       handlerId:
         type: integer
       handlerName:
         type: string
       id:
-        type: integer
+        example: ""
+        type: string
       imageCount:
         type: integer
       lastActivityAt:
@@ -158,7 +165,8 @@ definitions:
       fromStatus:
         $ref: '#/definitions/domain.Status'
       id:
-        type: integer
+        example: ""
+        type: string
       messageType:
         $ref: '#/definitions/domain.MessageType'
       toStatus:
